--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,15 @@
 </head>
 
 <body>
-  <h1>Express</h1>
-  <p>Welcome to Express</p>
+  <form id="form">
+    <input name="username" placeholder="Username" /><br>
+    <input name="password" placeholder="Password" /><br>
+    <input name="firstName" placeholder="First Name" /><br>
+    <input name="lastName" placeholder="Last Name" /><br>
+    <input type="submit" text="Submit" />
+  </form>
+
+  <script src="./javascripts/index.js"></script>
 </body>
 
 </html>
