--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,21 @@
-<script src="/socket.io/socket.io.js"></script>
-<script>
-  var socket = io('http://localhost:3000')
-  socket.emit("test")
-</script>
-<h1>Hello, world.</h1>
-<p>This is served simply to to test if the io() connects</p>
-<button onClick={socket.emit("test2")}>Test 2</button>
+<!doctype html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <title>Teammato</title>
+  <base href="/">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/forms.css">
+<link rel="stylesheet" href="styles.f932cdf646b9a48d90f3.css"></head>
+
+<body>
+  <app-root></app-root>
+<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.06a31e74fd809c481e67.js"></script><script type="text/javascript" src="main.72387d0b07781082ea32.js"></script></body>
+
+</html>
