--- a/public/index.html
+++ b/public/index.html
@@ -18,10 +18,11 @@
   <link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
 
   <link rel="stylesheet" href="assets/forms.css">
+  <link rel="stylesheet" href="assets/btn-link.css">
 <link rel="stylesheet" href="styles.f932cdf646b9a48d90f3.css"></head>
 
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.06a31e74fd809c481e67.js"></script><script type="text/javascript" src="main.5e6b874e3893eae00e57.js"></script></body>
+<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.06a31e74fd809c481e67.js"></script><script type="text/javascript" src="main.89c98fe2d601497de721.js"></script></body>
 
 </html>
